<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.student.getatutor.Get_A_Tutor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">



            <TextView
                android:id="@+id/textView_TBR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ULC TBR"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"

                    android:layout_marginRight="25dp"

                    android:text="MENU ">

                </TextView>

                <Spinner
                    android:id="@+id/spinner_homeMenu"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="120dp"
            android:paddingRight="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView_get_a_tutor"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Get A Tutor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_date"

                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="0dp"

                    android:text="Select Week"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_week"
                        android:layout_width="216dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="0dp"
                        android:background="#C8C8C8"
                        android:popupBackground="#C8C8C8"
                        android:spinnerMode="dropdown"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button_prevWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Prev" />

                    <Button
                        android:id="@+id/button_nextWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Next" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_subject"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner_subject"
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:background="#C8C8C8"
                    android:popupBackground="#C8C8C8"
                    android:spinnerMode="dropdown"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView_course"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:text="Course"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner_course"
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:background="#C8C8C8"
                    android:popupBackground="#C8C8C8"
                    android:spinnerMode="dropdown"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView_session"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Sessions Available" />

                <ListView
                    android:id="@+id/listView_timeblock"
                    android:layout_width="match_parent"
                    android:layout_height="382dp"
                    android:layout_marginTop="0dp"
                    android:scrollbars="vertical" />




            </LinearLayout>


        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>


